                    changed TextOnlyUI::activate()
        graphic/
            ssggraph/
                CMakeLists.txt
                    added connection to frontend module
                    added rppUtils and Filesystem for Linux
                grboard.cpp
                    included "Mediator.h"
                    included "IndicatorConfig.h"

                    added   m_textures array

                    added   DispActiveIndicators()
                    added   DispIndicatorIcon();
                    added   DispIndicatorText();
                    added   LoadIndicatorTextures()

                    changed cGrBoard(): removed assignments of removed members
                    changed ~cGrBoard(): removed deletes of removed members
                    changed grInitBoardCar(): added loading of indicator textures
                    changed refreshBoard(): removed deleted ui elements
                    changed selectBoard(): removed cases for removed elements
                    changed loadDefaults(): removed loads of parameters for removed elements
                    changed grDispCounterBoard2(): removed gauges

                    removed grDispGGraph()
                    removed grDispEngineLeds()
                    removed grDispCarBoard()
                    removed grDispCarBoard1()
                    removed grDispCarBoard2()
                    removed grDispIndicators()
                    removed grDispLeaderBoard()
                    removed grDispLeaderBoardScroll()
                    removed grDispLeaderBoardScrollLine()
                    removed grDispDashboard()
                    removed grDispArcade()
                    removed grGenerateLeaderBoardEntry()
                    removed trackMap member
                    removed grGetSplitTime()
                    removed grGetLapsTime()
                    removed grSetupDrawingArea()
                    removed getTrackMap()